fix after merge with conflicts
Signed-off-by: David BRAQUART <david.braquart@rte-france.com>